--- a/HitomiApi/HitomiApi/HitomiApi.csproj
+++ b/HitomiApi/HitomiApi/HitomiApi.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\embedio\src\EmbedIO\EmbedIO.csproj" />
   </ItemGroup>
 
