--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,13 +17,15 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
-    - name: Move
-      run: cd HitomiApi
     - name: Install dependencies
-      run: dotnet restore
+      run: cd HitomiApi
+           dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: cd HitomiApi
+           dotnet build --configuration Release --no-restore
     - name: Publish
-      run: dotnet publish -c Release --self-contained -r ubuntu.18.04-x64
+      run: cd HitomiApi
+           dotnet publish -c Release --self-contained -r ubuntu.18.04-x64
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: cd HitomiApi
+           dotnet test --no-restore --verbosity normal
