--- a/HitomiApi/embedio/src/EmbedIO/EmbedIO.csproj
+++ b/HitomiApi/embedio/src/EmbedIO/EmbedIO.csproj
@@ -5,7 +5,7 @@
     <Copyright>Copyright © Unosquare 2013-2020</Copyright>
     <AssemblyTitle>EmbedIO Web Server</AssemblyTitle>
     <Authors>Unosquare, and Contributors to EmbedIO</Authors>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>EmbedIO</AssemblyName>
     <PackageId>EmbedIO</PackageId>
